2011-01-20  Chris Kühl  <chrisk@openismus.com>

	Removed unnecessary C headers in .hg files.

	*clutter/src/actor-meta.hg:
	*clutter/src/actor.hg:
	*clutter/src/alpha.hg:
	*clutter/src/animation.hg:
	*clutter/src/container.hg:
	*clutter/src/interval.hg:
	*clutter/src/media.ccg:
	*clutter/src/path.[h|cc]g:
	*clutter/src/score.hg:
	*clutter/src/script.hg:
	*clutter/src/scriptable.[h|cc]g:
	*clutter/src/shader.[h|cc]g:
	*clutter/src/stage.hg:
	*clutter/src/texture.hg:

2011-01-20  Chris Kühl  <chrisk@openismus.com>

	Replaced use of unsigned int with guint.

	*clutter/src/actor.[cc|h]g:
	*clutter/src/box-layout.hg:
	*clutter/src/path.hg:
	*clutter/src/rectangle.hg:
	*clutter/src/text.hg:
	*clutter/src/types.[cc|h]g:

2011-01-19  Chris Kühl  <chrisk@openismus.com>

	Cleaned up include files in LayoutManager.

	*clutter/src/layout-manager.[h|cc]g: Cleaned up includes.

2011-01-18  Chris Kühl  <chrisk@openismus.com>

	Added missing properties to Clutter::Stage.

	*clutter/src/stage.hg: Added missing properties.

2011-01-15  Chris Kühl  <chrisk@openismus.com>

	Added constness to *Layout accessor member functions.

	* clutter/src/[bin|box|flow]-layout.hg: Added contness to member
	functions that I forgot earlier.

2011-01-15  Chris Kühl  <chrisk@openismus.com>

	Added missing properties to ClutterMedia.

	* clutter/src/media.hg Added subtitle-font-name & subtitle-uri properties.

2011-01-14  Chris Kühl  <chrisk@openismus.com>

	Initial wrapping of ClutterFlowLayout.

	* clutter/cluttermm.h: Added header file for new class.
	* clutter/src/flow-layout.[hg|ccg]: Initial wrapping of ClutterFlowLayout.
	* clutter/src/clutter_signals.defs: Added properties for new class.
	* clutter/src/filelist.am: Added new classes to files_hg list.
	* codegen/extradefs/generate_extra_defs_clutter.cc: Added new class.
	* codegen/m4/convert_clutter.m4: Added enum conversion for FlowOrientation.

2011-01-14  Chris Kühl  <chrisk@openismus.com>

	Initial wrapping of ClutterBoxLayout.
