@@ -14,6 +14,7 @@ files_hg =			\
 	actor.hg		\
 	alpha.hg		\
 	animation.hg		\
+	animator.hg		\
 	backend.hg		\
 	behaviour.hg		\
 	behaviour-depth.hg	\
